--- a/main.css
+++ b/main.css
@@ -14,7 +14,8 @@ main section * {
   transition: all ease-out 100ms;
 }
 .l--grid-half {
-  width: 49%;
+  width: 100%;
+  max-width: 49%;
   display: inline-block;
 }
 .icon:after,
@@ -336,6 +337,133 @@ button.a--destruction-ico:before {
   cursor: default;
 }
 .set-2 .a--pag-num:hover {
+  border: 1px solid #405665;
+  background-color: #fff;
+  box-shadow: none;
+  border-radius: 50%;
+}
+
+/* Section 3 styles */
+.set-3 a:focus {
+  text-shadow: none;
+  box-shadow: none;
+  outline: none;
+  border: 1px solid currentColor;
+  border-radius: 3px;
+  padding: 0.125em 0.5em;
+}
+.set-3 button:hover {
+  background-color: #476376;
+  border-color: #476376;
+  box-shadow: 0px 3px 0px 0px #31424E;
+  color: #fff;
+  transition: color ease-in 200ms 250ms,
+              background-color ease-in 200ms 250ms,
+              box-shadow linear 200ms;
+}
+.set-3 button.c--cta:hover {
+  background-color: #476376;
+  border-color: #476376;
+  box-shadow: 0px 3px 0px 0px #31424E;
+}
+.set-3 button.c--destruction:hover {
+  box-shadow: 0px 3px 0px 0px #A3312B;
+  color: #fff;
+  background-color: #D4423B;
+  border-color: #D4423B;
+}
+.set-3 button.c--destruction:hover:before {
+  color: #fff;
+  transition: color ease-in 200ms;
+}
+.set-3 button.c--disabled {
+  background-color: #EFEFEF;
+  border-color: #CCC;
+  cursor: not-allowed;
+  position: relative;
+}
+.set-3 .c--disabled i {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+  right: 0;
+  left: 113%;
+  top: 0;
+  transition: opacity ease-in 200ms,
+              background-color linear 50ms;
+  padding: 1em;
+  border: 1px solid currentColor;
+  border-radius: 3px;
+  visibility: hidden;
+  background-color: #fff;
+  line-height: 1.5em;
+}
+.set-3 .c--disabled i:before {
+  position: absolute;
+  background-color: #fff;
+  top: 10%;
+  left: -6%;
+  content: '\e109';
+  font-style: normal;
+  font-family: 'Duo Admin Icons';
+  line-height: 1rem;
+}
+.set-3 .c--disabled:hover i {
+  width: 200%;
+  height: auto;
+  opacity: 1;
+  visibility: visible;
+}
+.set-3 button.c--disabled:hover {
+  border-bottom-width: 1px;
+  border-bottom-color: #CCC;
+  box-shadow: none;
+  font-weight: 400;
+  cursor: not-allowed;
+  color: currentColor;
+}
+
+.set-3 .a--dropdown-content {
+  width: 0;
+  right: 0%;
+  left: 100%;
+  top: 90%;
+  height: 100%;
+  max-height: 0;
+  position: absolute;
+  transition: width linear 100ms,
+              height linear 100ms,
+              position linear 100ms,
+              opacity ease-in 300ms,
+              left linear 100ms,
+              top linear 100ms,
+              right linear 100ms,
+              bottom linear 100ms,
+              max-height linear 200ms,
+              overflow linear 600ms;
+}
+.set-3 .a--dropdown-checkbox:checked ~ .a--dropdown-content {
+  width: 110%;
+  left: 0;
+  right: -10%;
+  max-height:20vw;
+}
+.set-3 .c--pag-current {
+  border: none;
+  border-radius: 0;
+  font-weight: 500;
+  box-shadow: 0px 3px 0px 0px currentColor;
+}
+.set-3 .c--pag-current:hover {
+  border-color: #405665;
+  background-color: #405665;
+  color: #fff;
+  box-shadow: none;
+  border-radius: 50%;
+  cursor: default;
+}
+.set-3 .a--pag-num:hover {
   border: 1px solid #405665;
   background-color: #fff;
   box-shadow: none;
